--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter_svg: ^2.0.7
   percent_indicator: ^4.2.3
   schema_dart: ^0.0.5
+  flutter_web_auth: ^0.5.0
 
 
 dev_dependencies:
