--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   percent_indicator: ^4.2.3
   schema_dart: ^0.0.5
   flutter_web_auth: ^0.5.0
+  google_sign_in: ^6.2.1
+  supabase_auth_ui: ^0.4.4
 
 
 dev_dependencies:
